[package]
name = "rustman_database"
version = "0.1.0"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unchained = "0.1.3"
toml = "0.5.3"
http_req = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
json = "0.11.15"
